tests/netgen/function/junction_types/errors/junction_type_actuated_tls/spider/options.netgen
--default-junction-type actuated --spider --spider.arm-number=4 --spider.circle-number=1 --spider.space-radius=100 --output=net.net.xml -v
